--- a/views/inventory.xml
+++ b/views/inventory.xml
@@ -89,7 +89,8 @@
                         <button name="%(wizard_verify_asset_repaire_assets)d" attrs="{'invisible':['|',('current_user', '=', False),('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal','approved','rejected'])]}" type="action" string="Repair Asset" class="btn btn-primary"  />
                         <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':['|',('current_ifra_manager', '=', False),('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal','approved','rejected'])]}" type="action" string="Relocate" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager" />
                         <button name="%(wizard_verify_asset_dis_assets)d" attrs="{'invisible':['|',('current_ifra_manager', '=', False),('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','repair','disposal','approved','rejected'])]}" type="action" string="Dispose Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager,InventoryTracking.infrastructure_admin"/>
-                        <button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','verified_one','disposal','approved','rejected'])]}" type="action" string="Deploy Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager,InventoryTracking.infrastructure_admin" />
+                        <!--<button name="%(wizard_dispatch_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','verified_one','disposal','approved','rejected'])]}" type="action" string="Deploy Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager,InventoryTracking.infrastructure_admin" />-->
+                        <button name="%(wizard_intiate_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','diployment','active','verified_one','disposal','approved','rejected'])]}" type="action" string="Initiate Diagnosis" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager,InventoryTracking.infrastructure_admin" />
 
                         <button name="%(wizard_verify_asset_dis_assets)d" attrs="{'invisible':[('asset_status', 'in', ['new','stocked','verified','verified_one','diployment','active','disposal','approved','rejected'])]}" type="action" string="Dispose Asset" class="btn btn-primary" groups="InventoryTracking.infrastructure_manager"/>
                         
@@ -120,7 +121,7 @@
                             <field name = "ram"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]}" />
                             <field name = "hdd"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]}" />
                             <field name = "os"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]} " />
-                            <field name = "comp_name"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]} " />
+                            <field name = "comp_names"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]} " />
                             <field name = "Processor"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]} " />
                             <field name = "bios"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]} " />
                             <field name = "os_build"  attrs="{'invisible':[('asset_type', 'in', ['monitor','printer','switch','router'])]} " />
