--- a/wizard/infra_approve_deployment.xml
+++ b/wizard/infra_approve_deployment.xml
@@ -6,13 +6,27 @@
             <field name="arch" type="xml">
                 <form string="Approve">
                     <group>
+                        <separator string="Asset Approval Checklist" colspan="2"/>
+                        <field name="infra_comp_name"/>   
+                        <field name="Operating_system_Build"/>   
+                        <field name = "Microsoft_office" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "browser" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "Antivirus" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "os_updates" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "user_file" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "guest_account" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "ou" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name="user_department"/>   
+                        <field name="other_information"/>   
+                    </group>
+                    <group>
                         <field name="infra_approve_comment"/>   
                     </group>
                      <group>
-                        <field name="infra_approve_by" readonly="1"/>   
+                        <field name="infra_approve_by" invisible="1"/>   
                     </group>
                     <group>
-                        <field name="infra_approve_date" readonly="1"/>
+                        <field name="infra_approve_date" invisible="1"/>
                     </group>
                     <footer>
                         <button name="infra_approved_asset" string="Approve Deployment" type="object" class="btn btn-outline-primary"/>
